--- a/PINS.wiki
+++ b/PINS.wiki
@@ -32,7 +32,7 @@ const dague_pins_module_t dague_pins_print_steals_module = {
 };
 }}}
 
-It is customary to name the init/fini routines {{{pins_<init/fini type>_<module name>}}} in order to maintain a level of consistency that will be of use to other module developers. This naming convention is fully demonstrated in the {{{papi_exec}}}, {{{print_steals}}}, {{{papi_select}}}, and {{{papi_socket}}} modules.
+It is customary to name the init/fini routines {{{pins_<init/fini type>_<module name>}}} in order to maintain a level of consistency that will be helpful to other module developers. This naming convention is fully demonstrated in the {{{papi_exec}}}, {{{print_steals}}}, {{{papi_select}}}, and {{{papi_socket}}} modules.
 
 {{{pins_init}}} is invoked a single time, during {{{dague_init()}}}, before the PaRSEC profiling system is active, and before the entirety of the {{{dague_context_t}}} structure (particularlly including all virtual process and thread structures) is instantiated, but after the initialization of the PaRSEC profiling system (if built).  This is the right place to perform any custom initialization, such as global memory allocation, that does not depend on anything thread or handle-related. 
 
@@ -62,11 +62,13 @@ The {{{pins_fini}}} routine may also be used to perform final operations with it
 
 {{{pins_handle_init}}} is invoked a single time per instantiated {{{dague_handle_t}}}. It is called after most of the handle information has been created, so initialization that is dependent on the handle's aspects should generally function as desired. 
 
-Currently, this method is not commonly used, as the initialization process for the {{{dague_handle_t}}} itself does not lend itself to the reliable use of the corresponding {{{pins_handle_fini}}} routine, and the PINS system itself does not allow for separate callbacks per handle. In the future, it is expected that instrumentation relating to the performance of most tasks would be best initialized and finalized per handle, as opposed to per overall PaRSEC process ({{{pins_init}}}), so as to provide the full flexibility of the PaRSEC runtime as it potentially runs many separate DAG graphs in parallel.
+Currently, this method is not commonly used, as the initialization process for the {{{dague_handle_t}}} itself does not lend itself to the reliable use of the corresponding {{{pins_handle_fini}}} routine, and the PINS system itself does not allow for separate callbacks per handle. //In the future, it is expected that instrumentation relating to the performance of most tasks would be best initialized and finalized per handle, as opposed to per overall PaRSEC process// ({{{pins_init}}}), so as to provide the full flexibility of the PaRSEC runtime as it potentially runs many separate DAG graphs in parallel.
 
 {{{pins_handle_fini}}} is not currently provided by the PINS system, though it will soon be implemented and will provide a functionality mirroring that of {{{pins_handle_init}}}, and resembling that of {{{pins_fini}}}, but per handle instead of per PaRSEC runtime.
 
-{{{pins_thread_init}}} is invoked once per thread created by the PaRSEC runtime, very close to the beginning of that thread's lifetime, but, crucially, **after** the initialization of the PaRSEC profiling system and the registration of the thread with PAPI. This allows for the full and safe use of both the profiling system and PAPI calls, e.g. {{{PAPI_create_eventset()}}}. The order of these invocations is not defined. 
+{{{pins_thread_init}}} is invoked once per thread created by the PaRSEC runtime, very close to the beginning of that thread's lifetime, but, crucially, **after** the initialization of the PaRSEC profiling system and the registration of the thread with PAPI. This allows for the full and safe use of both the profiling system and PAPI calls, e.g. {{{PAPI_create_eventset()}}}. In PaRSEC, each thread is associated with one and only one {{{dague_execution_unit_t}}} for its entire lifetime, and these objects will have been fully initialized before the call to the module thread_init routine. However, the order of these per-thread invocations is not guaranteed.
+
+In {{{print_steals}}}, the thread_init routine simply allocates per-execution unit data counters.
 
 {{{
 static void pins_thread_init_print_steals(dague_execution_unit_t * exec_unit) {
@@ -74,7 +76,9 @@ static void pins_thread_init_print_steals(dague_execution_unit_t * exec_unit) {
 }
 }}}
 
-The corresponding {{{pins_thread_fini}}} routine is invoked once per thread very near the end of the thread's lifetime, but before the destruction of the profiling system. The order of **these** invocations **is** defined: the master thread (thread 0) will be fini'd first, and the rest of the threads will be fini'd in counting order of which core they were bound to. This is particularly useful for the {{{print_steals}}} module, as it allows an elegant, in-order, row-by-row print of the task-stealing matrix that would otherwise have to be accomplished by nested {{{for}}} loops in the {{{pins_fini}}} call.
+{{{pins_thread_fini}}} is invoked once per thread very near the end of the thread's lifetime, but before the destruction of the profiling system. 
+
+The order of **these** invocations **is** defined: the master thread (thread 0) will be fini'd first, and the rest of the threads will be fini'd in counting order of which core they were bound to, e.g.: 0, 1, 2, 3, ..., 46, 47, 48. This is particularly useful for the {{{print_steals}}} module, as it allows an elegant, in-order, row-by-row print of the task-stealing matrix that would otherwise have to be accomplished by nested {{{for}}} loops in the {{{pins_fini}}} call.
 
 {{{
 static void pins_thread_fini_print_steals(dague_execution_unit_t * exec_unit) {
