--- a/PINS.wiki
+++ b/PINS.wiki
@@ -134,4 +134,4 @@ Therefore, there is also a built-in capability to limit activated modules by nam
 
 It is not necessary to use this function at all - by default, all modules are **//enabled//**. If you //do// wish to use the function, you must call it **before** calling {{{dague_init()}}}, as the function will have no effect after {{{pins_init()}}} is run. 
 
-However, the DPLASMA testing executables provided with PaRSEC automatically invoke this function with an empty list in order to simplify testing processes - that is, all PINS modules are **//disabled//** by default in DPLASMA tests. Therefore, in order to enable the use of any PINS modules when testing with a provided DPLASMA testing executable, you must use the {{{--mca-pins}}} command line flag with a list of comma-separated PINS module names, e.g. {{{./testing_dpotrf -N 10000 --mca-pins=print_steals}}}, or {{{./testing_dgeqrf -N 10000 --mca-pins=papi_socket,papi_select}}}.
+However, the DPLASMA testing executables provided with PaRSEC automatically invoke this function with the contents of the {{{--mca-pins}}} runtime flag. As a result, all PINS modules are **//disabled//** by default in DPLASMA tests, as the default 'content' of the flag is null. To enable the use of any PINS module(s) when testing with a provided DPLASMA testing executable, you must use the {{{--mca-pins}}} command line flag with a list of comma-separated PINS module names, e.g. {{{./testing_dpotrf -N 10000 --mca-pins=print_steals}}}, or {{{./testing_dgeqrf -N 10000 --mca-pins=papi_socket,papi_select}}}.
