--- a/Home.wiki
+++ b/Home.wiki
@@ -11,6 +11,7 @@ Two moderated mailing-lists are available, one for the users and the other for t
 ** [[datadistribution|How to write a program that uses a DAGuE enabled operation]] (a.k.a. "what is this data distribution thing?")
 ** [[profile|How to profile DAGuE applications]]
 ** [[PINS|How to instrument DAGuE applications with PINS]]
+** [[py_dbpreader|How to use the Python Profile Reader]]
 
 == HPL over PARSEC ==
  
