--- a/Home.wiki
+++ b/Home.wiki
@@ -29,6 +29,22 @@ Two moderated mailing-lists are available, one for the users and the other for t
  *** SWAP_COLLECT are done in parallel
  *** SWAP_RECV and GEMM are not merged together
 
+ * V1: (283d459cd4be 6904 zenati)
+ ** In zenati branch, zgetrf_fusion.jdf
+ ** V0 +:
+ *** Update: Extraction done in Row Major, but TRSM/GEMM are still in column major
+
+ * TODO:
+ ** Panel:
+ *** Cleaner Bruck algorithm (take example on getrf_qrf from qr_lu branch)
+ *** Add immediate task to improve reactivity on the panel
+ *** UMAT could be replaced by WRITE data
+ ** Update:
+ *** Perfom all TRSM/GEMM in row major to improve performance off swap in case we want to use GPUs
+ *** Merge SWAP_RECV and GEMM tasks to reduce the task number
+ *** Reduce the exchanged volume during SWAP to its minimum
+
+
  ---- 
 
 [[wikiediting|Hints on the wiki editing]] (the previous welcome page)
